@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/crda
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/crda/ChangeLog,v 1.19 2010/01/26 17:02:57 chainsaw Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/crda/ChangeLog,v 1.20 2011/08/28 13:46:31 flameeyes Exp $
+
+*crda-1.1.2 (28 Aug 2011)
+
+  28 Aug 2011; Diego E. Pettenò <flameeyes@gentoo.org> +crda-1.1.2.ebuild:
+  Version bump; install rules in /lib/udev; verify crda on src_test rather than
+  compile (allows cross-compilation). Bug #380777.
 
 *crda-1.1.1 (26 Jan 2010)
 
